px-k8s-vol-shared/assets/busybox-app.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: busybox
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  replicas: 3
  template:
    metadata:
      labels:
        app: busybox
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: px/running
                operator: NotIn
                values:
                - "false"
              - key: px/enabled
                operator: NotIn
                values:
                - "false"
      containers:
      - name: busybox
        image: busybox
        imagePullPolicy: "IfNotPresent"
        volumeMounts:
        - mountPath: /data
          name: busybox-data
      volumes:
      - name: busybox-data
        persistentVolumeClaim:
          claimName: px-shared-pvc
